<resources>
    <string name="app_name">Мобильный клиент</string>
    <string name="menu_about">О программе</string>
    <string name="menu_to_overview_fragment">Список объектов</string>
    <string name="menu_to_settings_fragment">Настройки</string>
    <string name="menu_to_param_detail_fragment">Параметры устройств</string>
    <string name="fragment_main_header">Мобильный клиент</string>
    <string name="fragment_overview_header">Список объектов</string>
    <string name="fragment_settings_header">Настройки</string>
    <string name="fragment_about_header">О программе</string>
    <string name="settings_group_name_lbl">Название подключения</string>
    <string name="settings_group_name_hint">Название подключения</string>
    <string name="settings_group_name_default">По умолчанию</string>
    <string name="settings_server_name_lbl">Имя сервера</string>
    <string name="settings_server_name_hint">Имя сервера, порт</string>
    <string name="settings_server_name_default">svn.pipe-st.ru,50052</string>
    <string name="settings_db_name_lbl">Имя БД сервера</string>
    <string name="settings_db_name_hint">Имя БД сервера</string>
    <string name="settings_db_name_default">tctdb11</string>
    <string name="settings_db_user_name_lbl">Имя пользователя БД</string>
    <string name="settings_db_user_name_hint">Имя пользователя БД</string>
    <string name="settings_db_user_name_default">tctclient</string>
    <string name="settings_db_password_lbl">Пароль пользователя БД</string>
    <string name="settings_db_password_hint">Пароль пользователя БД</string>
    <string name="settings_db_password_default">tctclient</string>
    <string name="settings_save_btn_capt">Сохранить</string>
    <string name="settings_delete_btn_capt">Удалить</string>
    <string name="overview_name_lbl">Имя устройства</string>
    <string name="overview_name_hint">Поиск по имени устройства</string>
    <string name="overview_name_background_text">Введите несколько символов</string>
    <string name="overview_selected_lbl">Выбрано устройство:</string>
    <string name="overview_selected_default">Пока ничего не выбрано</string>
    <string name="overview_to_data_caption">Данные</string>
    <string name="overview_to_data_hint">Показать архивные данные устройства</string>
    <string name="overview_to_device_log_caption">Журнал</string>
    <string name="overview_to_device_log_hint">Показать журнал выходов на связь</string>
    <string name="overview_to_alarms_caption">Тревоги</string>
    <string name="overview_to_alarms_hint">Показать тревоги устройства</string>
    <string name="overview_show_on_map_caption">Карта</string>
    <string name="overview_show_on_map_hint">Показать на карте</string>
    <string name="fragment_param_detail_label">Параметры устройств (БД сервера)</string>
    <string name="fragment_param_detail_devtypeid">Тип устройства</string>
    <string name="fragment_param_detail_name">Имя параметра</string>
    <string name="fragment_param_detail_mnemocode">Мнемокод</string>
    <string name="fragment_param_detail_show_on_table">Отображать в таблице</string>
    <string name="fragment_param_detail_show_on_chart">Отображать на графике</string>
    <string name="fragment_param_detail_header">Параметры устройств (БД сервера)</string>
    <string name="fragment_detail_devname_lbl">Имя устройства</string>
    <string name="fragment_detail_fw_lbl">Версия прошивки</string>
    <string name="fragment_detail_channel_lbl">Тип канала связи</string>
    <string name="fragment_detail_reason_lbl">Причина выхода на связь</string>
    <string name="fragment_detail_signal_lbl">Уровень сигнала</string>
    <string name="fragment_detail_fw_hint">1-4-192</string>
    <string name="fragment_detail_channel_hint">GSM</string>
    <string name="fragment_detail_reason_hint">По расписанию</string>
    <string name="fragment_detail_signal_hint">Средний</string>
    <string name="fragment_detail_to_data_btn">Данные</string>
    <string name="fragment_detail_to_log_btn">Журнал</string>
    <string name="fragment_data_begin_period_lbl">Начало периода</string>
    <string name="fragment_data_begin_period_hint">Начало периода</string>
    <string name="fragment_data_end_period_lbl">Конец периода</string>
    <string name="fragment_data_end_period_hint">Конец периода</string>
    <string name="fragment_data_date_btn">Дата..</string>
    <string name="fragment_data_time_btn">Время..</string>
    <string name="fragment_data_load_btn">Загрузить</string>
    <string name="fragment_detail_header">Описание устройства</string>
    <string name="fragment_data_header">Данные устройства</string>
    <string name="invalid_date_time_dialog">Некорреткный временной интервал</string>
    <string name="connection_erroe_message">Нет соединения с сервером</string>
    <string name="fragment_data_datetime_lbl">Дата-время</string>
    <string name="fragment_device_log_tw_period_begin_lbl">Начало периода</string>
    <string name="fragment_device_log_period_end_lbl">Конец периода</string>
    <string name="fragment_device_log_date_begin_hint">Начальная дата</string>
    <string name="fragment_device_log_begin_date_btn">Дата...</string>
    <string name="fragment_device_log_begin_time_btn">Время...</string>
    <string name="fragment_device_log_time_begin_hint">Начальное время</string>
    <string name="fragment_device_log_date_end_hint">Конечная дата</string>
    <string name="fragment_device_log_end_date_btn">Дата...</string>
    <string name="fragment_device_log_time_end_hint">Конечное время</string>
    <string name="fragment_device_log_end_time_btn">Время...</string>
    <string name="fragment_device_log_datetime_lbl">Дата-время</string>
    <string name="fragment_device_log_duration_lbl">Продолжительность</string>
    <string name="fragment_device_log_fw_version_lbl">Версия прошивки</string>
    <string name="fragment_device_log_channel_lbl">Канал связи</string>
    <string name="fragment_device_log_signal_level_lbl">Уровень сигнала</string>
    <string name="fragment_device_log_load_btn">Загрузить</string>
    <string name="fragment_device_log_header">Журнал устройства</string>
    <string name="fragment_main_text">Для начала работы воспользуйтесь контекстным меню</string>
    <string name="loading_dialog_cancel_btn">Отмена</string>
    <string name="loading_dialog_title">Обновление данных...</string>
</resources>