<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.mobileclient.paramdetail.ParamDetailFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.mobileclient.paramdetail.ParamDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/paramDetailFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLight">

        <TextView
            android:id="@+id/fragment_param_detail_header_tw"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/fragment_param_detail_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/fragment_param_detail_divider_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/colorBackgroundDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_param_detail_header_tw" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/colorBackgroundLight"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/fragment_param_detail_divider_1">

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:text="@string/fragment_param_detail_devtypeid" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:text="@string/fragment_param_detail_name" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:text="@string/fragment_param_detail_mnemocode" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:text="@string/fragment_param_detail_show_on_table" />

            <TextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight="1"
                android:padding="@dimen/padding_small"
                android:text="@string/fragment_param_detail_show_on_chart" />

        </LinearLayout>

        <View
            android:id="@+id/fragment_param_detail_divider_2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorBackgroundDark"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/param_detail_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_param_detail_divider_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>